# general-crawler

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  llm_test.py  ollama_test.py  pyproject.toml
frontend/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: AddOfferModal.tsx  ComparisonView.tsx  Dashboard.tsx  Layout.tsx
frontend/services/: mockData.ts  realData.ts
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
processed_data/: compu_trabajo_job_offers_20260523_10_00_llm_parsed.json
src/: config.py  utils.py
src/job/: compu_trabajo.py  mixins.py
src/job/common/: constants.py  utils.py
src/job/compu_trabajo/: __init__.py  scraper.py  utils.py
src/job/indeed/: indeed_page_example.html  scraper.py
src/job/occ/: scraper.py
test/: test_utils.py
